# django-channels-leak

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
channels_leak/: manage.py
channels_leak/channels_leak/: asgi.py  settings.py  urls.py  wsgi.py
channels_leak/chat/: consumers.py  routing.py
channels_leak/chat/templates/chat/: index.html  room.html
hotfixes/channels_redis/: core.py
redis/: redis.conf
