[tool.poetry]
name = "django-channels-leak"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
channels = "^3.0.3"
channels-redis = "^3.2.0"
channels-rabbitmq = "^3.0.0"
Pympler = "^0.9"
daphne = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
